# vcfempy

./: .gitignore  .readthedocs.yaml  requirements.txt  setup.cfg
docs/: Makefile  index.html  modules.html  objects.inv  search.html  searchindex.js  vcfempy.html
docs/_sources/: vcfempy.materials.rst.txt
docs/source/: api.rst  conf.py  index.rst  modules.rst  vcfempy.flow.rst  vcfempy.rst
examples/: examples.py
src/: README.rst  examples.py  tests.py
src/docs/: Makefile
src/docs/source/: conf.py  index.rst  vcfempy.meshgen.rst  vcfempy.rst
src/vcfempy/: flow.py  materials.py  meshgen.py
src/vcfempy.egg-info/: PKG-INFO
tests/: tests.py
