[metadata]
name = vcfempy
version = 0.0.3
author = Brandon Karchewski
author_email = brandon.karchewski@ucalgary.ca
description = A package for the Voronoi Cell Finite Element Method
long_description = file: src/README.rst
long_description_content_type = text/x-rst
url = https://bitbucket.org/karcheba1/vcfempy
project_urls =
    Bug Tracker = brandon.karchewski@ucalgary.ca
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
	numpy
	scipy
	matplotlib

[options.packages.find]
where = src
